[gd_scene load_steps=8 format=3 uid="uid://cnpxb8yi0dple"]

[ext_resource type="Script" path="res://level/level.gd" id="1_42mtc"]
[ext_resource type="PackedScene" uid="uid://ck6lofge3misj" path="res://components/bar/bar.tscn" id="1_ks1o6"]
[ext_resource type="PackedScene" uid="uid://8iqfe3hk474i" path="res://components/timer/countdowner.tscn" id="3_r7nn1"]
[ext_resource type="PackedScene" uid="uid://d1ttfneukjryd" path="res://components/babash/babash.tscn" id="4_0f41c"]
[ext_resource type="PackedScene" uid="uid://dbfhex5tjvka" path="res://components/left_eye/left_eye.tscn" id="5_j8hlu"]
[ext_resource type="PackedScene" uid="uid://evuhwattptqn" path="res://components/right_eye/right_eye.tscn" id="6_2xpsu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lqak2"]
bg_color = Color(1, 1, 1, 1)

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_42mtc")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lqak2")

[node name="Bar" parent="." instance=ExtResource("1_ks1o6")]
layout_mode = 1
offset_bottom = 100.0

[node name="Countdowner" parent="." instance=ExtResource("3_r7nn1")]
layout_mode = 1

[node name="Babash" parent="." instance=ExtResource("4_0f41c")]
layout_mode = 1

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(570, 825)

[node name="Panel" type="Panel" parent="Node2D"]
custom_minimum_size = Vector2(100, 100)
offset_left = -22.0
offset_top = -8.0
offset_right = 173.0
offset_bottom = 201.0
mouse_default_cursor_shape = 2

[node name="LeftEye" parent="." instance=ExtResource("5_j8hlu")]
position = Vector2(674, 563)

[node name="RightEye" parent="." instance=ExtResource("6_2xpsu")]
position = Vector2(953, 565)

[node name="MosquitoCounterTimer" type="Timer" parent="."]

[node name="MosquitoButtonSpawnerTimer" type="Timer" parent="."]

[node name="CanOfPeasTimer" type="Timer" parent="."]

[node name="BabashPeasTimer" type="Timer" parent="."]

[node name="RadioAppearanceTimer" type="Timer" parent="."]

[node name="BabashAngryTimer" type="Timer" parent="."]

[connection signal="bar_filled" from="Bar" to="." method="_on_bar_bar_filled"]
[connection signal="time_out" from="Countdowner" to="." method="_on_countdowner_time_out"]
[connection signal="gui_input" from="Node2D/Panel" to="." method="_on_panel_gui_input"]
[connection signal="left_eye_clicked" from="LeftEye" to="." method="_on_left_eye_left_eye_clicked"]
[connection signal="right_eye_clicked" from="RightEye" to="." method="_on_right_eye_right_eye_clicked"]
[connection signal="timeout" from="MosquitoCounterTimer" to="." method="_on_mosquito_timer_timeout"]
[connection signal="timeout" from="MosquitoButtonSpawnerTimer" to="." method="_on_mosquito_button_spawner_timer_timeout"]
[connection signal="timeout" from="CanOfPeasTimer" to="." method="_on_can_of_peas_timer_timeout"]
[connection signal="timeout" from="BabashPeasTimer" to="." method="_on_babash_peas_timer_timeout"]
[connection signal="timeout" from="RadioAppearanceTimer" to="." method="_on_radio_appearance_timer_timeout"]
[connection signal="timeout" from="BabashAngryTimer" to="." method="_on_babash_angry_timer_timeout"]
